--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ cypress
 .prettierignore
 .prettierrc
 mysqlToPostgres.js// Tweak ESLint settings at 2024-10-01 12:22:51
+// Update Docker setup at 2024-10-08 13:22:17
