--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ cypress
 .prettierrc
 mysqlToPostgres.js// Tweak ESLint settings at 2024-10-01 12:22:51
 // Update Docker setup at 2024-10-08 13:22:17
+// Update README at 2024-10-09 16:03:31
