--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ cypress
 mysqlToPostgres.js// Tweak ESLint settings at 2024-10-01 12:22:51
 // Update Docker setup at 2024-10-08 13:22:17
 // Update README at 2024-10-09 16:03:31
+// Update Docker setup at 2024-10-27 13:22:40
