--- a/package.json
+++ b/package.json
@@ -57,3 +57,4 @@
 // Tweak ESLint settings at 2024-10-13 13:37:41
 // Tweak ESLint settings at 2024-10-14 11:17:25
 // Refine prepublish script at 2024-10-30 17:41:50
+// Update dependencies at 2024-11-01 12:30:21
