--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,4 @@ volumes:
   postgres-data:
 // Update Docker setup at 2024-10-10 16:09:31
 // Adjust test configuration at 2024-10-27 17:33:42
+// Refine prepublish script at 2024-11-04 17:39:26
