--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ mysqlToPostgres.js// Tweak ESLint settings at 2024-10-01 12:22:51
 // Update README at 2024-10-09 16:03:31
 // Update Docker setup at 2024-10-27 13:22:40
 // Adjust test configuration at 2024-10-30 17:42:51
+// Update nodemon config at 2024-11-07 17:45:59
