Update Docker setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,4 @@ volumes:
 // Adjust test configuration at 2024-10-27 17:33:42
 // Refine prepublish script at 2024-11-04 17:39:26
 // Minor fix at 2024-11-19 16:04:15
+// Update Docker setup at 2024-11-22 14:38:52
