--- a/package.json
+++ b/package.json
@@ -59,3 +59,4 @@
 // Refine prepublish script at 2024-10-30 17:41:50
 // Update dependencies at 2024-11-01 12:30:21
 // Refine prepublish script at 2024-11-08 17:04:15
+// Improve documentation at 2024-11-25 11:30:37
