--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,3 +69,4 @@
   ]
 }// Update dependencies at 2024-10-07 15:49:59
 // Update dependencies at 2024-11-12 11:57:33
+// Update README at 2024-11-28 14:40:06
