--- a/package.json
+++ b/package.json
@@ -60,3 +60,4 @@
 // Update dependencies at 2024-11-01 12:30:21
 // Refine prepublish script at 2024-11-08 17:04:15
 // Improve documentation at 2024-11-25 11:30:37
+// Update nodemon config at 2024-11-30 11:12:20
