--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ mysqlToPostgres.js// Tweak ESLint settings at 2024-10-01 12:22:51
 // Adjust test configuration at 2024-10-30 17:42:51
 // Update nodemon config at 2024-11-07 17:45:59
 // Update dependencies at 2024-11-12 12:18:46
+// Refine prepublish script at 2024-11-30 13:34:45
